# Memex-

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  app.py  main.py  memex.db
backend/app/api/: __init__.py  analytics.py  capture.py  search.py  settings.py
backend/app/core/: constants.py  di.py  utils.py
backend/app/core/config/: settings.py
backend/app/core/exceptions/: handlers.py
backend/app/core/logging/: logger.py
backend/app/core/models/: analytics.py  capture.py  health.py  processing.py  search.py  settings.py
backend/app/core/repositories/: analytics_repository.py  capture_repository.py  history_repository.py  migration.py  settings_repository.py
backend/app/core/services/: analytics_service.py  capture_service.py  processing_service.py  search_service.py  settings_service.py  sync_service.py  vector_store_service.py
backend/tests/: conftest.py  test_analytics_endpoint.py  test_capture_endpoint.py  test_health.py  test_processing_service.py  test_search_endpoint.py  test_settings_endpoint.py  test_storage_layer.py  test_storage_milestone.py
extension/: background.js  contentScript.js  manifest.json
extension/popup/: popup.html
frontend/: .prettierrc  package-lock.json  package.json  tsconfig.json
frontend/src/pages/: index.tsx
